# context-adaptive-cognitive-flow

./: EQUATION_UI_MAPPING.md  LICENSE  README.md  agent_orchestrator.py  app.py  coach_agent.py  companion_agent.py  context_hub.py  database_models.py  demo_app.py  feedback_loop.py  perception_engine.py  pyproject.toml  replit.md  response_engine.py  teacher_agent.py  utils.py
attached_assets/: Pasted--Context-Adaptive-Cognitive-Flow-C-1760169908710_1760169908711.txt  agent_orchestrator_1760169925861.py  app_1760169925861.py  app_full_version_1760169925861.py  cacf_demo_1760169925861.py  coach_agent_1760169922333.py  companion_agent_1760169922333.py  context_hub_1760169922333.py  database_models_1760169922334.py  feedback_loop_1760169922334.py  init_db_1760169918387.py  main_1760169918388.py  perception_engine_1760169918388.py  requirements_1760169918388.txt  response_engine_1760169918389.py  sample_input_1760169918389.json  teacher_agent_1760169918389.py  utils_1760169918389.py  validate_cacf_corrections_1760169918390.py  verification_report_1760169918390.py
context_adaptive_cognitive_flow/: main.py
context_adaptive_cognitive_flow/agents/: __init__.py  coach.py  companion.py  teacher.py
context_adaptive_cognitive_flow/modules/: __init__.py  context_recognition.py  feedback_loop.py  response_strategy.py  sensing.py
