[project]
name = "context-adaptive-cognitive-flow"
version = "0.1.0"
description = "Official implementation of the Context-Adaptive Cognitive Flow framework for cognitive rehabilitation in older adults."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "streamlit>=1.51.0",
]
